--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <p>WPSSO and its extensions are fully tested and compatible with PHP v7.x (PHP v5.3 or better required).</p>
 
-<h4>WPSSO (Core Plugin) Prerequisite</h4>
+<h3>WPSSO (Core Plugin) Prerequisite</h3>
 
 <p>WPSSO Mobile App Meta is an extension for the WPSSO (Core Plugin), which automatically generates complete and accurate meta tags and Schema markup from your content for Social Media Optimization (SMO) and Search Engine Optimization (SEO).</p>
 
@@ -63,9 +63,9 @@
 
 <p>The <a href="https://wpsso.com/extend/plugins/wpsso-am/?utm_source=wpssoam-readme-prereq">WPSSO AM Pro extension</a> uses many WPSSO Pro (Core Plugin) features and requires the <a href="https://wpsso.com/extend/plugins/wpsso/?utm_source=wpssoam-readme-prereq">WPSSO Pro (Core Plugin)</a>.</p>
 
-<h4>Quick List of Features</h4>
+<h3>Quick List of Features</h3>
 
-<p><strong>WPSSO AM Free / Standard Features</strong></p>
+<h4>WPSSO AM Free / Standard Features</h4>
 
 <p><span style="color:#33cc33">&#x0229b;</span> &nbsp; Extends the features of WPSSO Free or Pro.</p>
 
@@ -86,9 +86,9 @@
 
 <p><span style="color:#33cc33">&#x0229b;</span> &nbsp; Download the Free version from <a href="https://surniaulula.github.io/wpsso-am/">GitHub</a> or <a href="https://wordpress.org/plugins/wpsso-am/">WordPress.org</a>.</p>
 
-<h4>Quick List of Features (Continued)</h4>
+<h3>Quick List of Features (Continued)</h3>
 
-<p><strong>WPSSO AM Pro / Additional Features</strong></p>
+<h4>WPSSO AM Pro / Additional Features</h4>
 
 <p><span style="color:#33cc33">&#x0229b;</span> &nbsp; Extends the features of WPSSO Pro (requires a licensed WPSSO Pro plugin).</p>
 
@@ -134,7 +134,7 @@
 
 <p><span style="color:#33cc33">&#x0229b;</span> &nbsp; Include or exclude the Mobile Apps tab on posts, pages, and custom post types.</p>
 
-<h4>Mobile App Meta Tags</h4>
+<h3>Mobile App Meta Tags</h3>
 
 <p><span style="color:#33cc33">&#x0229b;</span> &nbsp; <strong>Apple mobile Safari Meta Tags</strong></p>
 
@@ -157,7 +157,7 @@
 <li>twitter:app:url:googleplay</li>
 </ul>
 
-<h4>Extends the WPSSO Plugin</h4>
+<h3>Extends the WPSSO Plugin</h3>
 
 <p><span style="color:#33cc33">&#x0229b;</span> &nbsp; The WPSSO AM Free extension works with either the Free or Pro version of WPSSO (Core Plugin).</p>
 
@@ -168,7 +168,7 @@
 
 <h2>Installation</h2>
 
-<h4>Install and Uninstall</h4>
+<h3>Install and Uninstall</h3>
 
 <ul>
 <li><a href="https://wpsso.com/docs/plugins/wpsso-am/installation/install-the-plugin/">Install the WPSSO AM Plugin (Free and Pro version)</a></li>
@@ -178,7 +178,7 @@
 
 <h2>Frequently Asked Questions</h2>
 
-<h4>Frequently Asked Questions</h4>
+<h3>Frequently Asked Questions</h3>
 
 <ul>
 <li>None</li>
@@ -188,7 +188,7 @@
 <h2>Other Notes</h2>
 
 <h3>Other Notes</h3>
-<h4>Additional Documentation</h4>
+<h3>Additional Documentation</h3>
 
 <ul>
 <li>None</li>
