--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 <h2>Installation</h2>
 
-<h3>Install and Uninstall</h3>
+<h3 class="top">Install and Uninstall</h3>
 
 <ul>
 <li><a href="https://wpsso.com/docs/plugins/wpsso-am/installation/install-the-plugin/">Install the WPSSO AM Add-on</a></li>
@@ -160,7 +160,7 @@
 
 <h2>Frequently Asked Questions</h2>
 
-<h3>Frequently Asked Questions</h3>
+<h3 class="top">Frequently Asked Questions</h3>
 
 <ul>
 <li>None</li>
@@ -170,7 +170,7 @@
 <h2>Other Notes</h2>
 
 <h3>Other Notes</h3>
-<h3>Additional Documentation</h3>
+<h3 class="top">Additional Documentation</h3>
 
 <ul>
 <li>None</li>
