--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <h1>WPSSO Mobile App Meta for Apple&#039;s mobile Safari banner and Twitter&#039;s App Card</h1>
 
 <table>
-<tr><th align="right" valign="top" nowrap>Plugin Name</th><td>WPSSO Mobile App Meta</td></tr>
+<tr><th align="right" valign="top" nowrap>Plugin Name</th><td>WPSSO Mobile App Meta [Add-on]</td></tr>
 <tr><th align="right" valign="top" nowrap>Summary</th><td>WPSSO Core add-on provides Apple Store / iTunes and Google Play App meta tags for Apple&#039;s mobile Safari banner and Twitter&#039;s App Card.</td></tr>
 <tr><th align="right" valign="top" nowrap>Stable Version</th><td>1.9.2</td></tr>
 <tr><th align="right" valign="top" nowrap>Requires At Least</th><td>WordPress 3.8</td></tr>
