--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <h3>WPSSO AM Free / Standard Features</h3>
 
 <ul>
-<li><p>Extends the features of the WPSSO Core Free or Pro plugin.</p></li>
+<li><p>Extends the features of the WPSSO Core plugin.</p></li>
 <li><p>Adds an optional banner in Apple's mobile Safari for your website's Apple Store mobile App.</p></li>
 <li><p>Adds a Mobile App Meta settings page to the SSO menu with additional options:</p>
 
