--- a/html/install.html
+++ b/html/install.html
@@ -60,9 +60,19 @@
 
 	</li>
 
-	<li>Enter the unique Authentication ID you received for the WPSSO AM add-on in the <em>SSO &gt; Licenses</em> settings page.</li>
+	<li>Select the <em>SSO</em> menu item.</li>
+
+	<li>Select the <em>Licenses</em> settings page.</li>
+
+	<li>Scroll down and locate the "WPSSO AM Authentication ID" option.</li>
+
+	<li>Enter the unique Authentication ID you received for the WPSSO AM add-on.</li>
 
 	<li>Click the "Save All Settings" button at the bottom of the settings page.</li>
+
+	<li>Stay in the <em>Licenses</em> settings page.</li>
+
+	<li>Scroll down and locate the "WPSSO Mobile App Meta" add-on and its links.</li>
 
 	<li><strong>If the Free / Standard version of WPSSO AM is already installed</strong>, click the <em>Add-on Details and Update</em> link:
 
