--- a/html/install.html
+++ b/html/install.html
@@ -1,4 +1,4 @@
-<h2 class="top">WPSSO Core Plugin Prerequisite</h2>
+<h2 class="top">WPSSO Core Plugin Required</h2>
 
 <p>WPSSO Mobile App Meta (aka WPSSO AM) is an add-on for the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a> &mdash; to install and activate the WPSSO AM add-on, you must already have installed and activated the WPSSO Core plugin.</p>
 
