--- a/html/install.html
+++ b/html/install.html
@@ -1,6 +1,6 @@
 <h2 class="top">WPSSO Core Plugin Required</h2>
 
-<p>WPSSO Mobile App Meta (aka WPSSO AM) is an add-on for the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a> &mdash; to install and activate the WPSSO AM add-on, you must already have installed and activated the WPSSO Core plugin.</p>
+<p>WPSSO Mobile App Meta Tags (aka WPSSO AM) is an add-on for the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a> &mdash; to install and activate the WPSSO AM add-on, you must already have installed and activated the WPSSO Core plugin.</p>
 
 <h2>Install the Add-on</h2>
 
@@ -12,7 +12,7 @@
 
 	<li>Select the <em>Complementary Add-ons</em> settings page.</li>
 
-	<li>Scroll down and locate the "WPSSO Mobile App Meta" add-on.</li>
+	<li>Scroll down and locate the "WPSSO Mobile App Meta Tags" add-on.</li>
 
 	<li>Click the <em>Add-on Details and Install</em> link.
 
@@ -26,7 +26,7 @@
 
 	<li>Click the <em>Activate Plugin</em> button when WordPress is finished installing the plugin.</li>
 
-	<li>The add-on settings page is available under the <em>SSO &gt; Mobile App Meta</em> sub-menu.</li>
+	<li>The add-on settings page is available under the <em>SSO &gt; Mobile Apps</em> sub-menu.</li>
 
 </ol>
 
