--- a/html/uninstall.html
+++ b/html/uninstall.html
@@ -9,9 +9,9 @@
 
 	<li>Select the <em>Installed Plugins</em> sub-menu.</li>
 
-	<li>Scroll down to the "WPSSO Mobile App Meta" plugin (or use the Search field), and click its <em>Deactivate</em> link.</li>
+	<li>Scroll down to the "WPSSO Mobile App Meta Tags" plugin (or use the Search field), and click its <em>Deactivate</em> link.</li>
 
-	<li>Scroll down to the "WPSSO Mobile App Meta" plugin (or use the Search field), and click its <em>Delete</em> link.</li>
+	<li>Scroll down to the "WPSSO Mobile App Meta Tags" plugin (or use the Search field), and click its <em>Delete</em> link.</li>
 
 	<li>Click on the <em>Yes, Delete these files and data</em> button.</li>
 
