--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 <li>Mobile App Banner
 
 <ul>
-<li>Add Banner to Archive Webpages</li>
-<li>Add Banner to Page Homepage</li>
+<li>Add Banner to Home Page</li>
 <li>Add Banner to Post Types (posts, pages, media, products, etc.).</li>
+<li>Add Banner to Archive Pages</li>
 </ul></li>
 <li>Apple Store App
 
