--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </header>
       <section>
-<h1>Mobile App Meta Tags</h1><h3>WPSSO Add-on</h3>
+<h1>WPSSO Mobile App Meta Tags</h1>
 
 <table>
 <tr><th align="right" valign="top" nowrap>Plugin Name</th><td>WPSSO Mobile App Meta Tags</td></tr>
