--- a/index.html
+++ b/index.html
@@ -62,13 +62,15 @@
 
 <p>&#x2605;&#x2605;&#x2605;&#x2605;&#x2605; &mdash; "Universal links, smart app banners, Twitter app cards - App developers, this is the plugin you need." - <a href="https://wordpress.org/support/topic/universal-links-smart-app-banners-twitter-app-cards/">markofjohnson</a></p>
 
-<h3>WPSSO AM Standard Features</h3>
+<h3>WPSSO AM Features</h3>
 
-<ul>
-<li><p>Extends the features of the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a>.</p></li>
-<li><p>Adds an optional banner in Apple's mobile Safari for your website's Apple Store mobile App.</p></li>
-<li><p>Adds optional <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to webpages.</p></li>
-<li><p>Adds a Mobile App Meta Tags settings page to the SSO menu with additional options:</p>
+<p>Extends the features of the <a href="https://wordpress.org/plugins/wpsso/">WPSSO Core plugin</a>.</p>
+
+<p>Adds an optional banner in Apple's mobile Safari for your website's Apple Store mobile App.</p>
+
+<p>Adds optional <a href="https://dev.twitter.com/cards/types/app">Twitter App Card</a> meta tags to webpages.</p>
+
+<p>Adds a Mobile App Meta Tags settings page to the SSO menu with additional options:</p>
 
 <ul>
 <li>Mobile App Banner
@@ -91,8 +93,9 @@
 <li>Show Tab on Post Types</li>
 <li>Default App Store Territory</li>
 </ul></li>
-</ul></li>
-<li><p>Includes and optional Mobile Apps tab in the Document SSO metabox with additional options:</p>
+</ul>
+
+<p>Includes and optional Mobile Apps tab in the Document SSO metabox with additional options:</p>
 
 <ul>
 <li>Twitter App Card
@@ -127,7 +130,6 @@
 <li>App ID Number</li>
 <li>Affiliate Data</li>
 <li>Argument String</li>
-</ul></li>
 </ul></li>
 </ul>
 
